--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="app_name">Oftentimes2000</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_oftentimes2000">Oftentimes2000</string>
+    <string name="menu_featured">Featured</string>
+    <string name="menu_favorites">Favorites</string>
+    <string name="menu_categories">Categories</string>
 
 </resources>
