--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="menu_featured">Featured</string>
     <string name="menu_favorites">Favorites</string>
     <string name="menu_categories">Categories</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
+    <string name="login">Login</string>
 
 </resources>
