Create button for Kevin

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="login">Login</string>
+    <string name="menu_map">View Map</string>
 
 </resources>
