--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -23,10 +23,17 @@
     <string name="price">$0.00</string>
     <string name="discount">0%</string>
     <string name="creator">Creator</string>
-    <string name="phone">123-456-7890</string>
+    <string name="phone">123&#8211;456&#8211;7890</string>
     <string name="url">URL</string>
     <string name="date">Date</string>
     <string name="from_date">From:</string>
     <string name="to_date">To:</string>
+    <string name="push_notification">Push Notification</string>
+    <string name="server_config">Server Config</string>
+    <string name="ping_interval">Ping Interval (hour)</string>
+    <string name="push_notification_enable">Enable push notification</string>
+    <string name="push_notification_desc">This requires GCM</string>
+    <string name="ping_interval_enable">Enable server ping</string>
+    <string name="ping_interval_desc">This requires GPS</string>
 
 </resources>
